--- a/css/media-small.css
+++ b/css/media-small.css
@@ -23,9 +23,7 @@
         display:inline;
     }
 
-    .headerMenu a, .headerMenu ul li a{
-        color:white;
-    }
+
 
 
     nav a:hover,
